# daggy

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: lint.yml  tests.yml
hooks/: post_gen_project.py
tests/: test_project_template.py
{{cookiecutter.package_name}}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  run.sh  start.sh
{{cookiecutter.package_name}}/.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
{{cookiecutter.package_name}}/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
{{cookiecutter.package_name}}/.github/workflows/: build-and-publish-docs.yml  build-docker.yml  changelog-enforcer.yml  lint.yml  tag-and-release.yml  tests.yml
{{cookiecutter.package_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.package_name}}/docs/source/modules/: module.rst
{{cookiecutter.package_name}}/src/{{cookiecutter.module_name}}/: __init__.py
{{cookiecutter.package_name}}/tests/: test_copyright_header.py
